@@ -6,6 +6,7 @@ Upcoming:
 - Ported all the logic blocks
 - The inventory checker now supports the new tags instead of ore dictionary
 - The 'dump storage' screen module works now
+- The crafter should now support 'tags' better (for crafting)
 
 2.0.1-alpha:
 - Fixed the simple dialer model
